# Lvgl

./: .gitignore  CMakeLists.txt  README.md  csv_to_bin_all.sh  lv_conf.h  simulator.code-workspace  tr.c  tr.h  ui.c  ui.h  widget.c  widget.h  widget.txt
app/: main_win.cpp  main_win.h  set_window.cpp  set_window.h
lv_binding_cpp/: CMakeLists.txt
lv_binding_cpp/lv_cpp/core/: LvDisplay.cpp
lv_binding_cpp/lv_drivers/display/: monitor.c  monitor.h
lv_binding_cpp/lvgl/src/extra/libs/png/: lv_png.c
src/: main.cpp  mouse_cursor_icon.cpp  mrker.cpp  mrker.h  translation_bin.cpp  translation_bin.h  widget.cpp  widget.h  widgets_bin.cpp  widgets_bin.h  win.cpp  win.h
src/hal/: hal.c  hal.h
tools/: csv_to_translation_bin.cpp  csv_to_widgets_bin.cpp  win.cpp  win.h
ui/: translation.csv  widget.csv  widget2.csv
